--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ondřej Kulhavi</title>
+    <title>Ondřej Kulhavý</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +15,7 @@
     <section class="hero">
         <div class="hero-content">
             <div class="hero-text">
-                <h1>Ondřej Kulhavi</h1>
+                <h1>Ondřej Kulhavý</h1>
                 <p class="tagline">I build software systems inside real environments — hospitals, institutions, teams — where things actually have to work.</p>
                 <p class="subtitle">Student at Timmi Akademia · Team lead · Developer at IKEM</p>
             </div>
