--- a/index.html
+++ b/index.html
@@ -55,20 +55,16 @@
             <h2 class="text-xs font-semibold text-gray-400 uppercase tracking-widest">Selected Work</h2>
             
             <div class="group">
-                <div class="flex justify-between items-center mb-4">
-                    <div class="flex items-center gap-3">
-                        <img src="assets/logo.svg" alt="VRLab" class="h-8">
-                    </div>
-                    <span class="text-xs text-gray-400 text-right">Institute for Clinical and<br>Experimental Medicine</span>
+                <div class="flex justify-between items-baseline mb-2">
+                    <h3 class="font-medium text-gray-900">VRLab</h3>
+                    <span class="text-sm text-gray-400">Institute for Clinical and Experimental Medicine</span>
                 </div>
                 <p class="text-gray-600 text-sm leading-relaxed mb-3">
-                    A web application and database system for managing patient data and 3D anatomical models. It distributes models to VR devices for surgical planning and is used daily in transplant procedures.
+                    A web application and database system for managing patient data and 3D anatomical models. Used daily in transplant procedures.
+                    <a href="vrlab.html" class="text-blue-600 hover:underline ml-1">Read case study</a>
                 </p>
 
-                <div class="grid grid-cols-1 md:grid-cols-3 gap-3 mb-4">
-                    <div class="rounded-lg overflow-hidden bg-gray-100 border border-gray-200">
-                        <video src="assets/PXL_20250729_071519311%20(1).mp4" controls class="w-full h-48 object-cover"></video>
-                    </div>
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-3 mb-4">
                     <div class="rounded-lg overflow-hidden bg-gray-100 border border-gray-200">
                         <img src="assets/PXL_20250728_123509745.jpg" alt="IKEM VR Setup" class="w-full h-48 object-cover hover:scale-105 transition-transform duration-500">
                     </div>
