fix: update location and education details in the About section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <p class="text-gray-500 text-lg">Developer & Student</p>
                 </div>
                 <div class="flex gap-4 text-sm text-gray-400">
-                    <span>🇨🇿 Czech Republic</span>
+                    <span>🇪🇺🇨🇿 Czech Republic</span>
                     <span>•</span>
                     <span>Tiimiakatemia (Team Tuuli)</span>
                 </div>
@@ -46,7 +46,7 @@
         <section class="space-y-4">
             <h2 class="text-xs font-semibold text-gray-400 uppercase tracking-widest">About</h2>
             <p class="text-gray-600 leading-relaxed max-w-xl">
-                I'm a 20-year-old developer from the Czech Republic. I previously studied software development in Ireland and am currently part of Team Tuuli at Tiimiakatemia. I focus on building meaningful technology that solves real problems.
+                I'm a 20-year-old developer from the Czech Republic. I previously studied software development in Ireland and I'm currently studying at Tiimiakatemia Prague. In the meantime I work at Institute for Clinical and Experimental Medicine (IKEM). I love learning and building meaningful technology that solves real problems.
             </p>
         </section>
 
@@ -57,11 +57,11 @@
             <div class="group">
                 <div class="flex justify-between items-baseline mb-2">
                     <h3 class="font-medium text-gray-900">VRLab</h3>
-                    <span class="text-sm text-gray-400">Institute for Clinical and Experimental Medicine</span>
+                    <span class="text-sm text-gray-400">Institute for Clinical and Experimental Medicine (IKEM)</span>
                 </div>
                 <p class="text-gray-600 text-sm leading-relaxed mb-3">
                     A web application and database system for managing patient data and 3D anatomical models. Used daily in transplant procedures.
-                    <a href="vrlab.html" class="text-blue-600 hover:underline ml-1">Read case study</a>
+                    <a href="vrlab.html" class="text-blue-600 hover:underline ml-1">Learn more</a>
                 </p>
 
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-3 mb-4">
