--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <section class="space-y-4">
             <h2 class="text-xs font-semibold text-gray-400 uppercase tracking-widest">About</h2>
             <p class="text-gray-600 leading-relaxed max-w-xl">
-                I'm a 20-year-old developer from the Czech Republic. I previously studied software development in Ireland and I'm currently studying at Tiimiakatemia Prague. In the meantime I work at Institute for Clinical and Experimental Medicine (IKEM). I love learning and building meaningful technology that solves real problems.
+                I'm a 20-year-old developer from the Czech Republic. I previously studied software development in Ireland and I'm currently studying at <a href="https://ip.pef.czu.cz" target="_blank" class="border-b border-dotted border-gray-400 hover:border-gray-900 transition-colors">Tiimiakatemia Prague</a>. In the meantime I work at <a href="https://www.ikem.cz" target="_blank" class="border-b border-dotted border-gray-400 hover:border-gray-900 transition-colors">Institute for Clinical and Experimental Medicine (IKEM)</a>. I love learning and building meaningful technology that solves real problems.
             </p>
         </section>
 
