--- a/index.html
+++ b/index.html
@@ -46,7 +46,23 @@
         <section class="space-y-4">
             <h2 class="text-xs font-semibold text-gray-400 uppercase tracking-widest">About</h2>
             <p class="text-gray-600 leading-relaxed max-w-xl">
-                I'm a 20-year-old developer from the Czech Republic. I previously studied software development in Ireland and I'm currently studying at <a href="https://ip.pef.czu.cz" target="_blank" class="border-b border-dotted border-gray-400 hover:border-gray-900 transition-colors">Tiimiakatemia Prague</a>. In the meantime I work at <a href="https://www.ikem.cz" target="_blank" class="border-b border-dotted border-gray-400 hover:border-gray-900 transition-colors">Institute for Clinical and Experimental Medicine (IKEM)</a>. I love learning and building meaningful technology that solves real problems.
+                I'm a 20-year-old developer from the Czech Republic. I previously studied software development in Ireland and I'm currently studying at 
+                <span class="relative group">
+                    <a href="https://ip.pef.czu.cz" target="_blank" class="text-blue-600 font-medium hover:underline decoration-blue-300 underline-offset-2">Tiimiakatemia Prague</a>
+                    <span class="absolute bottom-full left-1/2 -translate-x-1/2 mb-3 w-64 p-4 bg-white text-xs text-gray-600 shadow-xl rounded-xl opacity-0 group-hover:opacity-100 transition-all duration-200 pointer-events-none border border-gray-100 z-50 text-center invisible group-hover:visible transform translate-y-2 group-hover:translate-y-0">
+                        <span class="font-semibold text-gray-900 block mb-1">Tiimiakatemia</span>
+                        A unique study program at CULS Prague focusing on team learning and entrepreneurship.
+                    </span>
+                </span>. 
+                In the meantime I work at 
+                <span class="relative group">
+                    <a href="https://www.ikem.cz" target="_blank" class="text-blue-600 font-medium hover:underline decoration-blue-300 underline-offset-2">Institute for Clinical and Experimental Medicine (IKEM)</a>
+                    <span class="absolute bottom-full left-1/2 -translate-x-1/2 mb-3 w-64 p-4 bg-white text-xs text-gray-600 shadow-xl rounded-xl opacity-0 group-hover:opacity-100 transition-all duration-200 pointer-events-none border border-gray-100 z-50 text-center invisible group-hover:visible transform translate-y-2 group-hover:translate-y-0">
+                        <span class="font-semibold text-gray-900 block mb-1">IKEM</span>
+                        The largest specialized clinical and scientific research base in the Czech Republic.
+                    </span>
+                </span>. 
+                I love learning and building meaningful technology that solves real problems.
             </p>
         </section>
 
