--- a/index.html
+++ b/index.html
@@ -19,25 +19,41 @@
     <main class="max-w-2xl w-full space-y-16">
         
         <!-- Header -->
-        <header class="flex flex-col md:flex-row gap-8 items-start md:items-center">
-            <div class="w-40 h-40 md:w-56 md:h-56 rounded-full overflow-hidden shadow-sm shrink-0">
-                <img src="assets/presenting.jpg" alt="Ondřej Kulhavý" class="w-full h-full object-cover scale-[1.8] origin-[50%_20%]">
-            </div>
-            <div class="space-y-3">
-                <div>
-                    <h1 class="text-3xl font-semibold tracking-tight text-gray-900">Ondřej Kulhavý</h1>
-                    <p class="text-gray-500 text-lg">Developer & Student</p>
+        <header class="flex flex-col-reverse md:flex-row justify-between items-start gap-8 md:gap-12 pt-8">
+            <div class="flex-1 space-y-6">
+                <div class="space-y-2">
+                    <h1 class="text-4xl md:text-5xl font-bold tracking-tight text-gray-900">Ondřej Kulhavý</h1>
+                    <p class="text-xl text-gray-600 font-medium">Developer & Student</p>
                 </div>
-                <div class="flex gap-4 text-sm text-gray-400">
-                    <span>🇪🇺🇨🇿 Czech Republic</span>
-                    <span>•</span>
-                    <span>Tiimiakatemia (Team Tuuli)</span>
+                
+                <div class="space-y-2 text-gray-500 text-sm">
+                    <div class="flex items-center gap-2">
+                        <i data-lucide="map-pin" class="w-4 h-4"></i>
+                        <span>Czech Republic</span>
+                    </div>
+                    <div class="flex items-center gap-2">
+                        <i data-lucide="graduation-cap" class="w-4 h-4"></i>
+                        <span>Tiimiakatemia (Team Tuuli)</span>
+                    </div>
                 </div>
-                <div class="pt-1">
-                    <a href="https://www.linkedin.com/in/ondrejkulhavy/" target="_blank" class="inline-flex items-center gap-2 px-4 py-2 bg-[#0077b5] text-white rounded-lg text-sm font-medium hover:bg-[#006396] transition-colors shadow-sm hover:shadow">
-                        <i data-lucide="linkedin" class="w-4 h-4"></i>
-                        Let's Connect
+
+                <div class="flex gap-2 pt-2">
+                    <a href="https://github.com/OndrejKulhavy" target="_blank" class="text-gray-500 hover:text-gray-900 transition-colors p-2 hover:bg-gray-100 rounded-lg -ml-2" aria-label="GitHub">
+                        <i data-lucide="github" class="w-5 h-5"></i>
                     </a>
+                    <a href="https://www.linkedin.com/in/ondrejkulhavy/" target="_blank" class="text-gray-500 hover:text-[#0077b5] transition-colors p-2 hover:bg-blue-50 rounded-lg" aria-label="LinkedIn">
+                        <i data-lucide="linkedin" class="w-5 h-5"></i>
+                    </a>
+                    <a href="mailto:ondrejkulhavy@proton.me" class="text-gray-500 hover:text-gray-900 transition-colors p-2 hover:bg-gray-100 rounded-lg" aria-label="Email">
+                        <i data-lucide="mail" class="w-5 h-5"></i>
+                    </a>
+                </div>
+            </div>
+
+            <div class="w-32 h-32 md:w-40 md:h-40 shrink-0 relative group">
+                <div class="absolute inset-0 bg-gray-100 rounded-2xl rotate-6 group-hover:rotate-3 transition-transform duration-300"></div>
+                <div class="relative w-full h-full rounded-2xl overflow-hidden shadow-sm bg-white">
+                    <img src="assets/presenting.jpg" alt="Ondřej Kulhavý" class="w-full h-full object-cover scale-[1.8] origin-[50%_20%]">
                 </div>
             </div>
         </header>
